@@ -2950,7 +2950,9 @@
     <EmbeddedResource Include="NHSpecificTest\NH1818\Mappings.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH2042\Mappings.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH2860\Mappings.hbm.xml" />
-    <EmbeddedResource Include="NHSpecificTest\NH3332\Mappings.hbm.xml" />
+    <EmbeddedResource Include="NHSpecificTest\NH3332\Mappings.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="NHSpecificTest\NH3050\Mappings.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH2469\Mappings.hbm.xml" />
     <EmbeddedResource Include="NHSpecificTest\NH2033\Mappings.hbm.xml" />
